# FT2-RAG-Demo

./: .gitignore  README.md  pyproject.toml
src/crunchbase_rag_demo/: __init__.py  cli.py  data.py  generation.py  loader.py  paths.py  retrieval.py  server.py
src/crunchbase_rag_demo/web/: app.js  index.html  styles.css
tests/: test_data.py  test_loader.py  test_retrieval.py  test_web_app.py
